--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.warc.gz filter=lfs diff=lfs merge=lfs -text
 rsae.ru/rsae.ru.warc.gz filter=lfs diff=lfs merge=lfs -text
+archnov.com/archnov.warc.gz filter=lfs diff=lfs merge=lfs -text
