--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 rsae.ru/rsae.ru.warc.gz filter=lfs diff=lfs merge=lfs -text
 archnov.com/archnov.warc.gz filter=lfs diff=lfs merge=lfs -text
 gnezdovo.com/gnezdovo.com.warc.gz filter=lfs diff=lfs merge=lfs -text
+gnezdovo.com/sitearchive-gnezdovo.com.db filter=lfs diff=lfs merge=lfs -text
+gnezdovo.com/gnezdovo.com.cdx filter=lfs diff=lfs merge=lfs -text
+gnezdovo.com/gnezdovo.com.txt filter=lfs diff=lfs merge=lfs -text
